--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
+    "react-loading-skeleton": "^3.0.1",
     "react-rating": "^2.0.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
